--- a/package.json
+++ b/package.json
@@ -4,20 +4,32 @@
     "private": true,
     "homepage": "./",
     "dependencies": {
+        "@binance-chain/bsc-use-wallet": "^0.8.1",
+        "@material-ui/core": "^4.11.4",
         "@pinata/sdk": "^1.1.14",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "@walletconnect/web3-provider": "^1.4.1",
+        "axios": "^0.21.1",
         "bootstrap": "^5.0.0",
+        "buffer": "^6.0.3",
         "ethers": "^5.1.4",
+        "fs": "^0.0.1-security",
+        "fs-react": "^0.0.4",
+        "gridfs-stream": "^1.1.1",
         "lodash": "^4.17.21",
         "react": "^17.0.2",
+        "react-binance-wallet": "^1.0.5",
         "react-bootstrap": "^1.6.0",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.2.0",
+        "react-images-upload": "^1.2.8",
         "react-multi-carousel": "^2.6.2",
+        "react-native-fs": "^2.18.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "use-wallet": "^0.8.1",
         "web-vitals": "^1.0.1",
         "web3": "^1.3.5",
         "web3modal": "^1.9.3",
