--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@testing-library/user-event": "^12.1.10",
         "@walletconnect/web3-provider": "^1.4.1",
         "axios": "^0.21.1",
-        "bootstrap": "^5.0.0",
+        "bootstrap": "^5.0.1",
         "buffer": "^6.0.3",
         "ethers": "^5.1.4",
         "fs": "^0.0.1-security",
@@ -27,8 +27,10 @@
         "react-images-upload": "^1.2.8",
         "react-multi-carousel": "^2.6.2",
         "react-native-fs": "^2.18.0",
+        "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "reactstrap": "^8.9.0",
         "use-wallet": "^0.8.1",
         "web-vitals": "^1.0.1",
         "web3": "^1.3.5",
