--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@binance-chain/bsc-use-wallet": "^0.8.1",
         "@material-ui/core": "^4.11.4",
+        "@material-ui/icons": "^4.11.2",
         "@pinata/sdk": "^1.1.14",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
