--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@binance-chain/bsc-use-wallet": "^0.8.1",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
+        "@material-ui/lab": "^4.0.0-alpha.58",
         "@pinata/sdk": "^1.1.14",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -28,6 +29,7 @@
         "react-images-upload": "^1.2.8",
         "react-multi-carousel": "^2.6.2",
         "react-native-fs": "^2.18.0",
+        "react-preloaders": "^3.0.3",
         "react-router-bootstrap": "^0.25.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
